gngforms/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: gngforms
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          name: mongo
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /data/db
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: mongo
