gngforms/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: gngforms
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
   - port: 27017
     name: mongo
