gngforms/gngforms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gngforms
  namespace: gngforms
  labels:
    app: gngforms
spec:
  selector:
    app: gngforms
  type: ClusterIP
  ports:
   - port: 5001
     name: gngforms
