gngforms/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gngforms
  namespace: gngforms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50G"
    cert-manager.io/issuer: prod
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-ingress-class: "public"
spec:
  rules:
   - host: forms.lesquerra.cat
     http:
      paths:
       - backend:
           serviceName: gngforms
           servicePort: 5001
  tls:
  - hosts:
    - forms.lesquerra.cat
    secretName: tlssecret
